--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@paralleldrive/cuid2": "^2.2.2",
     "material-symbols": "^0.14.3",
     "next": "14.0.4",
     "react": "^18",
